# FlashRead

./: .gitattributes  .gitignore  FlashRead.sln  README.md  docker-compose.yml  package-lock.json  package.json
.devcontainer/: devcontainer.json
.github/workflows/: backend-test.yaml  frontend-test.yaml
FlashRead.Server/: FlashRead.Server.csproj  FlashRead.Server.http  WeatherForecast.cs
FlashRead.Server/Controllers/: WeatherForecastController.cs
FlashRead.Server/Properties/: launchSettings.json
client/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
client/src/: App.tsx  main.tsx
client/wasm/: CMakeLists.txt  Makefile  README.md  debug_api.py  shader_provider.py
client/wasm/interface/: wasmInterface.d.ts  wasmInterface.js  wasmInterface.wasm
client/wasm/objpacker/: main.cpp  objpacker
client/wasm/src/: Context.h  main.cpp
client/wasm/src/core/: Camera.cpp  Camera.h  Components.h  PhysicsWorld.cpp  PhysicsWorld.h  Scene.cpp  Scene.h
client/wasm/src/game/: Player.cpp  Player.h  TestScene.cpp  TestScene.h
client/wasm/src/io/: Input.cpp  Input.h  RenderTarget.cpp  RenderTarget.h
client/wasm/src/meshes/: bookshelf.h  bunny.h  candle.h  chair.h  closedBook.h  emptyBookshelf.h  fullBookshelf.h  lectern.h  openBook.h  pencil.h  table.h  teapot.h
client/wasm/src/rendering/: Debug.cpp  Debug.h  GBuffer.cpp  GBuffer.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  UniformBuffer.h  Vertex.h
client/wasm/src/rendering/shaders/: debug.fs  debug.vs  light.fs  light.vs  main.fs  main.vs  mesh.fs  mesh.vs  post.vs
client/wasm/src/scenes/: test.h  testscene.h
client/wasm/src/util/: SceneBuilder.cpp  SceneBuilder.h  Timer.h
flashread.client/: CHANGELOG.md  package-lock.json  package.json  vite.config.js
flashread.client/src/: App.jsx
server/: Dockerfile
server/server/: Program.cs  (+8 more)
server/server.Tests/: UnitTest1.cs  UserDataControllerTests.cs  server.Tests.csproj
(+111 files in other folders)
